labs/day3/solutions/ServiceMeshDemo/allow-openweathermap.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: allow-openweathermap
spec:
  hosts:
  - api.openweathermap.org
  gateways:
  - external-egress-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
          - api.openweathermap.org
      route:
      - destination:
          host: api.openweathermap.org
