labs/day3/solutions/ServiceMeshDemo/restrict-curl-client.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: restrict-curl-client
spec:
  selector:
    matchLabels:
      app: curl-client
  rules:
  - to:
    - operation:
        hosts: 
        - api.openweathermap.org
